# Revision history for Perl module autobox::Transform

{{$NEXT}}

1.023 2016-10-10T21:46:35Z

 * Officially rename all "grep"-related methods to "filter" something,
   to open up for a new $array->filter() method which is more capable
   than autobox::Core's $array->grep(). There are aliases for all
   existing grep-methods.

   All grep-related methods will continue to work: they are not
   deprecated and will probably never go away.

 * Simple $array->filter($subref) method.


1.022 2016-10-09T20:11:29Z

 * POD fixes and documentation improvements


1.021 2016-10-09T19:33:10Z

 * The new call style for accessors is now the preferred one, the old
   one deprecated but still supported until 2.000 .

   If you have code with the old call style, please pin your version
   to < 2.000 in your cpanfile, dist.ini or whatever you use.


1.020 2016-10-09T15:15:22Z

 * Support for new call style for accessor method calls with arguments
   e.g. ->map_by([ price_with_discount_code => $code ])


1.019 2016-08-21T19:32:42Z

 * Minor POD fixes


1.018 2016-08-21T18:55:54Z

 * Array->to_ref, Hash->to_ref, Array->to_array, Hash->to_hash.
   Use these e.g. as a nicer way to enfore scalar or list context.

 * Use autobox::Core inside of autobox::Transform, so that e.g. String
   autobox methods can be used in a map_by


1.017 2016-07-25T11:53:06Z

 * Allow empty $args arrayref when accessing hash keys


1.016 2016-07-23T15:50:32Z

 * Improved docs


1.015 2016-07-23T15:27:10Z

 * Make $hash->map_each_value() official by documenting it.

 * grep_by can now take a $grep_subref to check if each item should
   remain (default: check for true values).


1.014 2016-07-21T17:02:10Z

 * map_each_value Hash method (so far undocumented)


1.013 2016-07-19T12:29:41Z

 * Change version required to 5.010, hopefully closing #3. Thanks to
   https://github.com/findmo for reporting.

 * Make $hash->map_each(), $hash->map_each_to_array() official by
   documenting them.


1.012 2016-07-07T17:10:47Z
